--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -20,4 +20,9 @@
         <item>11 P.M.</item>
     </string-array>
     <string name="title_activity_maps">Map</string>
+
+    <string-array name="Genero">
+        <item>Masculino</item>
+        <item>Femenino</item>
+    </string-array>
 </resources>
