Traduccion ingles/español de la clase de registro completo

--- a/app/src/main/res/values-ik-rUS/strings.xml
+++ b/app/src/main/res/values-ik-rUS/strings.xml
@@ -24,4 +24,8 @@
     <string name="mainc">Password</string>
     <string name="mainis">Login</string>
     <string name="mainre">Sign up</string>
+    <string name="regcu">User</string>
+    <string name="regcp">Password</string>
+    <string name="regcc">Confirm password</string>
+    <string name="regcce">E-mail</string>
 </resources>
