No tengo la version 26 de android, no puedo ver por ahora el diseño así que no se si esté mal

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -101,6 +101,7 @@
     <string name="tab5Ciudad">Ciudad</string>
     <string name="tab5estado">Estado</string>
     <string name="tab5registrar">Registrar</string>
+    <string name="title_activity_maps2">Map</string>
 
 
 </resources>
